fixed collapse & expand bug on /index

--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -1259,7 +1259,7 @@ ul.data-provider-cards-list {
 ul.data-provider-cards-list > li {
   list-style-type: none;
   background: lighten($bluewood, 65%);
-  padding: 1em 1em .5em 1em;
+  padding: .5em;
   border-radius: 5px;
   margin: 1em 0;
   display: none;
@@ -1322,7 +1322,7 @@ ul.card-info-actions-list li.learn-more {
 ul.card-info-actions-list li.learn-more a {
   text-decoration: none;
   border: 0;
-  padding: .2em .4em 0 .4em;
+  padding: .3em .4em .1em .4em;
   border-radius: 3px;
   transition: all .2s ease-in-out;
 }
@@ -1330,6 +1330,11 @@ ul.card-info-actions-list li.learn-more a:after { content: " \02192"; }
 ul.card-info-actions-list li.learn-more a:hover {
   background: lighten($bluewood, 60%);
   color: $orange;
+}
+
+li.learn-more i.glyphicon {
+  font-size: .9em;
+  vertical-align: -5%;
 }
 
 ul.data-provider-cards-list .hide-on-serp,
